# librime-typo

./: CMakeLists.txt  LICENSE  README.md  librime-typo.patch
data/: typo_flypy.txt  typo_pinyin.txt  typo_zrm.txt
src/: typo_compiler.cc  typo_filter.cc  typo_filter.h  typo_module.cc
